# altair

./: .gdbinit  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  attacks.cc  attacks.h  bitboard.cc  bitboard.h  bitboard_test.cc  compiler.h  eval.cc  eval.h  gen_magics.cc  log.h  magics.cc  main.cc  move.h  movegen.cc  movegen.h  movegen_test.cc  position.cc  position.h  position_test.cc  search.cc  search.h  thread.cc  thread.h  ttable.cc  ttable.h  ttable_test.cc  types.h  uci.cc  uci.h  util.h  value.cc  value.h  zobrist.cc  zobrist.h
tests/: perft.exp
tools/: gdb.py  perft.exp
